--- a/app/src/main/res/layout/rv_item.xml
+++ b/app/src/main/res/layout/rv_item.xml
@@ -1,43 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pdf_cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
-    app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:layout_marginStart="8dp"
-    android:id="@+id/pdf_cardView"
-    >
+    app:cardElevation="8dp">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="vertical"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
         android:padding="8dp">
+
+        <!-- PDF Image -->
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:id="@+id/pdf_imageView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.1"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:src="@drawable/pdf_image"
-            android:id="@+id/pdf_imageView"
-            android:layout_marginRight="5dp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:id="@+id/pdf_textName"
-        android:text="Name"
-        android:textSize="15dp"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:padding="6dp"
-        android:height="50dp"
-        android:textColor="@color/black"
-        />
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/pdf_image" />
+
+        <!-- Text and Date/Size -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.95"
+            android:orientation="vertical"
+            android:padding="0dp">
+
+            <!-- PDF Name -->
+            <TextView
+                android:id="@+id/pdf_textName"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:padding="6dp"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="Name"
+                android:textColor="@color/black"
+                android:textSize="14sp" /> <!-- Reduced text size -->
+
+            <!-- Date and Size -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
+                android:orientation="horizontal"
+                android:padding="0dp">
+
+                <!-- Size -->
+                <TextView
+                    android:id="@+id/pdfSize"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.4"
+                    android:ems="10"
+                    android:text="Size : "
+                    android:textColor="@color/black"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:paddingLeft="7dp"
+                    android:textSize="10sp" /> <!-- Reduced text size -->
+
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
