--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,37 @@
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <!-- Search View -->
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!-- Search View -->
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".9" />
+
+            <!-- Filter Button -->
+            <ImageView
+                android:id="@+id/filterButton"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/filter_list"
+                android:padding="6dp"
+                android:layout_weight=".08"
+                android:contentDescription="@string/filterImage" />
+
+        </LinearLayout>
 
         <!-- RecyclerView for PDFs -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:background="@color/cardview_light_background"/>
 
     </LinearLayout>
 
@@ -45,49 +66,3 @@
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
-
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    android:id="@+id/drawer_layout"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
-
-<!--    &lt;!&ndash; Toolbar &ndash;&gt;-->
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="?attr/actionBarSize"-->
-<!--        android:background="?attr/colorPrimary"-->
-<!--        app:titleTextColor="@android:color/white"-->
-<!--        app:popupTheme="@style/AppTheme.PopupOverlay"-->
-<!--        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-
-<!--    &lt;!&ndash; Main content layout &ndash;&gt;-->
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical">-->
-
-<!--        <androidx.appcompat.widget.SearchView-->
-<!--            android:id="@+id/searchView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/rv"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent" />-->
-
-<!--    </LinearLayout>-->
-
-<!--    &lt;!&ndash; Navigation drawer layout &ndash;&gt;-->
-<!--    <com.google.android.material.navigation.NavigationView-->
-<!--        android:id="@+id/navigationView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_gravity="start"-->
-<!--        app:menu="@menu/navigation_menu" />-->
-
-<!--</androidx.drawerlayout.widget.DrawerLayout>-->
