--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -4,11 +4,15 @@
     tools:ignore="HardcodedText">
 
     <item
-        android:id="@+id/share_app"
-        android:title="Share App" />
+        android:id="@+id/share_link"
+        android:title="Share Link" />
 
     <item
         android:id="@+id/nav_settings"
         android:title="Settings" />
+
+    <item
+        android:id="@+id/login"
+        android:title="Login / Sign up" />
 
 </menu>
